Updates for tp7 following a review of the video uploaded on Panopto. Fixed some issues with the recipes not showing up.

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   position: relative;
   width: 100%;
   height: 50vh;
-  background-image: none; /* (frenchtoast.jpg); */
+  background-image: none; /* (https://www.bing.com/images/blob?bcid=sy-KjsXVqeIE0kLrrGkXnjMcPlvX.....x0); */
   background-size: cover;
   background-position: center center;
   box-shadow: 0px 3px 3px rgba(0,0,0,0.7);
@@ -63,10 +63,10 @@ body {
 	color: black;
 }
 
-#titleBanner h3 {
+#titleBanner h4 {
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 2vw;
   color: black;
 }
 
